# minifind

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
benches/: filetype.rs  walk.rs
ci/: cargo-out-dir
man/: minifind.1  minifind.1.scd
src/: args.rs  filetype.rs  glob.rs  interrupt.rs  lib.rs  main.rs  meta.rs  ratelimit.rs  regex.rs  sched.rs  walk.rs
src/walk/: fallback.rs  unix.rs
tests/: pipeline.rs
wix/: main.wxs
