[package]
name = "minifind"
version = "0.6.2"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "minimal find reimplementation"
repository = "https://github.com/dkorunic/minifind"
homepage = "https://github.com/dkorunic/minifind"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.78.0"

[package.metadata.wix]
upgrade-guid = "EBD8E920-75F5-4C5B-9829-180971E88F3C"
path-guid = "6D1E177C-8B8D-4043-9C5C-D4001C57A524"
license = false
eula = false

[dependencies]
mimalloc = "0.1.48"
anstyle = "1.0.11"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["wrap_help", "unicode", "derive"] }
ignore = "0.4.23"
signal-hook = "0.3.18"
crossbeam-channel = "0.5.15"
bstr = "1.12.0"
libc = "0.2.175"
globset = "0.4.16"
regex = "1.11.2"
normpath = "1.3.0"
itertools = "0.14.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
