[package]
name = "minifind"
version = "0.7.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "minimal find reimplementation"
repository = "https://github.com/dkorunic/minifind"
homepage = "https://github.com/dkorunic/minifind"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.85.1"

[package.metadata.wix]
upgrade-guid = "EBD8E920-75F5-4C5B-9829-180971E88F3C"
path-guid = "6D1E177C-8B8D-4043-9C5C-D4001C57A524"
license = false
eula = false

[dependencies]
mimalloc = "0.1.48"
anstyle = "1.0.13"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["wrap_help", "unicode", "derive"] }
ignore = "0.4.25"
signal-hook = "0.4.3"
crossbeam-channel = "0.5.15"
bstr = "1.12.1"
libc = "0.2.182"
globset = "0.4.18"
regex = "1.12.3"
normpath = "1.5.0"
itertools = "0.14.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
