[package]
name = "minifind"
version = "0.9.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "minimal find reimplementation"
repository = "https://github.com/dkorunic/minifind"
homepage = "https://github.com/dkorunic/minifind"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.85.1"

[package.metadata.wix]
upgrade-guid = "EBD8E920-75F5-4C5B-9829-180971E88F3C"
path-guid = "6D1E177C-8B8D-4043-9C5C-D4001C57A524"
license = false
eula = false

[dependencies]
mimalloc = "0.1.52"
anyhow = "1.0.102"
lexopt = "0.3.2"
signal-hook = "0.4.4"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
governor = { version = "0.10", default-features = false, features = ["std", "quanta"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
libc = "0.2.186"
globset = "0.4.18"
regex = "1.12.4"
normpath = "1.5.1"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3"
ignore = "0.4.26"
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "filetype"
harness = false

[[bench]]
name = "walk"
harness = false

[lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"

# Optimized like release, but keeps symbols + debuginfo for profiling
# (perf/flame graphs). Not for distribution. Build with frame pointers via
# RUSTFLAGS="-C force-frame-pointers=yes" for reliable stack unwinding.
[profile.profiling]
inherits = "release"
strip = false
debug = "full"
